fix button and all spacing

--- a/style.css
+++ b/style.css
@@ -31,3 +31,11 @@ align-items: center;
 	max-height: 100%;
 	display: block;
 }
+
+
+button {
+	padding: 10px 8px 10px 8px;
+	background-color: #F5D083;
+	font-size: 16px;
+	border-radius: 4px;
+}
